--- a/DeathToPrinceFerdinand!.csproj
+++ b/DeathToPrinceFerdinand!.csproj
@@ -5,4 +5,7 @@
     <EnableDynamicLoading>true</EnableDynamicLoading>
     <RootNamespace>DeathToPrinceFerdinand</RootNamespace>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.9" />
+  </ItemGroup>
 </Project>
