Reorganized solution structure

--- a/DeathToPrinceFerdinand.Tests/DeathToPrinceFerdinand.Tests.csproj
+++ b/DeathToPrinceFerdinand.Tests/DeathToPrinceFerdinand.Tests.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PROJECT\DeathToPrinceFerdinand.csproj" />
+    <ProjectReference Include="..\DeathToPrinceFerdinand\DeathToPrinceFerdinand.csproj" />
   </ItemGroup>
 
   <ItemGroup>
